--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/connectBtn"
+                style="@style/outline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -74,9 +75,7 @@
                 android:orientation="horizontal"
                 android:padding="5dp"
                 android:text="@string/connect"
-                app:rippleColor="@android:color/holo_orange_light"
-                style="@style/outline"
-                >
+                app:rippleColor="@android:color/holo_orange_light">
 
             </com.google.android.material.button.MaterialButton>
         </RelativeLayout>
