--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
                     android:id="@+id/imgFlag"
                     android:layout_width="36dp"
                     android:layout_height="26dp"
-                    android:src="@drawable/default_flag" />
+                    android:src="@drawable/unknown" />
 
                 <TextView
                     android:id="@+id/txtstatus"
