--- a/app/src/main/res/layout/activity_server.xml
+++ b/app/src/main/res/layout/activity_server.xml
@@ -12,8 +12,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/world_map"
-        />
+        android:src="@drawable/world_map" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
@@ -64,18 +63,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
+                    <com.google.android.material.progressindicator.LinearProgressIndicator
                         android:id="@+id/serverConnectingProgress"
-                        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="4dp"
                         android:layout_alignParentTop="true"
                         android:layout_gravity="center"
                         android:indeterminate="true"
                         android:visibility="gone"
-                        app:mpb_progressStyle="horizontal"
-                        app:mpb_progressTint="@color/colorAccent"
-                        app:mpb_useIntrinsicPadding="false" />
+                        app:indicatorColor="@color/colorAccent"/>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -205,8 +201,7 @@
                             android:padding="5dp"
                             android:text="@string/connect"
                             android:textAllCaps="false"
-                            style="@style/outline"
-                            />
+                            style="@style/outline" />
 
 
                     </LinearLayout>
