--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,9 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
                 android:layout_marginStart="34dp"
-                android:layout_marginLeft="34dp"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -56,7 +54,7 @@
                     android:layout_height="wrap_content"
                     android:text="Connect to Vpn"
                     android:textColor="@color/colorAccentPink"
-                    android:textSize="12dp"
+                    android:textSize="12sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -65,11 +63,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="25dp"
-                android:layout_marginRight="25dp"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:padding="5dp"
@@ -79,11 +75,8 @@
                 app:strokeWidth="2dp"
                 app:strokeColor="@android:color/holo_orange_light"
                 app:rippleColor="@android:color/holo_orange_light">
-
             </com.google.android.material.button.MaterialButton>
         </RelativeLayout>
-
-
     </androidx.cardview.widget.CardView>
     </io.armcha.elasticview.ElasticView>
 
@@ -103,8 +96,8 @@
             android:indeterminate="true"
             android:visibility="gone"
             app:indicatorColor="@color/colorAccent" />
-
     </LinearLayout>
+
     <RelativeLayout
         android:layout_below="@id/snack"
         android:layout_width="match_parent"
@@ -112,19 +105,16 @@
         android:layout_gravity="center"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:background="@drawable/roundView"
+        android:background="@drawable/round_view"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:elevation="4dp">
 
-
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/world_map"
-            />
-
+            android:src="@drawable/world_map" />
 
         <!--<androidx.recyclerview.widget.RecyclerView
             android:id="@+id/regions_recycler_view"
@@ -147,7 +137,7 @@
             app:tl_indicator_margin_left="2dp"
             app:tl_indicator_margin_right="2dp"
             app:tl_indicator_margin_top="2dp"
-            app:tl_textBold="SELECT"/>
+            app:tl_textBold="SELECT" />
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager"
