--- a/app/src/main/res/layout/adapter_free_server.xml
+++ b/app/src/main/res/layout/adapter_free_server.xml
@@ -13,7 +13,7 @@
         android:id="@+id/imageFlag"
         android:layout_width="36dp"
         android:layout_height="26dp"
-        android:src="@drawable/us"
+        android:src="@drawable/unknown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,15 +30,13 @@
         android:textColor="@android:color/black"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/imageFlag"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageView
         android:layout_width="40dp"
         android:layout_height="12dp"
         android:layout_marginEnd="35dp"
-        android:layout_marginRight="35dp"
         android:src="@drawable/free"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageConnect"
