--- a/app/src/main/res/layout/adapter_paid_server.xml
+++ b/app/src/main/res/layout/adapter_paid_server.xml
@@ -13,7 +13,7 @@
         android:id="@+id/imageFlag"
         android:layout_width="36dp"
         android:layout_height="26dp"
-        android:src="@drawable/us"
+        android:src="@drawable/unknown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,15 +30,13 @@
         android:textColor="@android:color/black"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/imageFlag"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageView
         android:layout_width="55dp"
         android:layout_height="54dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp"
         android:src="@drawable/ic_premium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageConnect"
@@ -56,5 +54,4 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.533" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
