--- a/app/src/main/res/layout/adapter_paid_server.xml
+++ b/app/src/main/res/layout/adapter_paid_server.xml
@@ -16,7 +16,8 @@
         android:src="@drawable/unknown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="server flag" />
 
     <TextView
         android:id="@+id/textCountry"
@@ -43,7 +44,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textCountry"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:contentDescription="server type premium" />
 
     <ImageView
         android:id="@+id/imageConnect"
@@ -53,5 +55,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.533" />
+        app:layout_constraintVertical_bias="0.533"
+        android:contentDescription="server signal" />
 </androidx.constraintlayout.widget.ConstraintLayout>
