--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/world_map" />
+        android:src="@drawable/world_map"
+        android:contentDescription="World MAP" />
 
     <io.armcha.elasticview.ElasticView
         android:id="@+id/imageElasticView"
@@ -46,7 +47,8 @@
                     android:id="@+id/imgFlag"
                     android:layout_width="36dp"
                     android:layout_height="26dp"
-                    android:src="@drawable/unknown" />
+                    android:src="@drawable/unknown"
+                    android:contentDescription="Country Flag" />
 
                 <TextView
                     android:id="@+id/txtStatus"
@@ -114,7 +116,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/world_map" />
+            android:src="@drawable/world_map"
+            android:contentDescription="World MAP" />
 
         <!--<androidx.recyclerview.widget.RecyclerView
             android:id="@+id/regions_recycler_view"
