--- a/app/src/main/res/layout/adapter_free_server.xml
+++ b/app/src/main/res/layout/adapter_free_server.xml
@@ -16,7 +16,8 @@
         android:src="@drawable/unknown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="country flag" />
 
     <TextView
         android:id="@+id/textCountry"
@@ -41,7 +42,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageConnect"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.533" />
+        app:layout_constraintVertical_bias="0.533"
+        android:contentDescription="server type free" />
 
     <ImageView
         android:id="@+id/imageConnect"
@@ -51,5 +53,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.533" />
+        app:layout_constraintVertical_bias="0.533"
+        android:contentDescription="server signal" />
 </androidx.constraintlayout.widget.ConstraintLayout>
